--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,12 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngrx-tutorials": {
+    "basic-ngrx-use": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -40,7 +43,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngrx-tutorials",
+            "outputPath": "dist/basic-ngrx-use",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -91,10 +94,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ngrx-tutorials:build:production"
+              "browserTarget": "basic-ngrx-use:build:production"
             },
             "development": {
-              "browserTarget": "ngrx-tutorials:build:development"
+              "browserTarget": "basic-ngrx-use:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -102,7 +105,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngrx-tutorials:build"
+            "browserTarget": "basic-ngrx-use:build"
           }
         },
         "test": {
@@ -125,5 +128,5 @@
       }
     }
   },
-  "defaultProject": "ngrx-tutorials"
+  "defaultProject": "basic-ngrx-use"
 }
